--- a/public/store.html
+++ b/public/store.html
@@ -73,6 +73,10 @@
                         <p class="text-xl font-semibold text-green-600 mt-2">${producto.precio}</p>
                         <p class="text-gray-500 text-sm">Stock: ${producto.stock}</p>
                         <button class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700">Comprar</button>
+                        <button onclick="eliminarProducto('${producto._id}', '${producto.nombre}')"
+                            class="mt-4 bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-700">
+                            Eliminar
+                        </button>
                     `;
                     contenedor.appendChild(card);
                 });
@@ -111,6 +115,28 @@
                     console.error("Error al agregar producto:", error);
                 }
             });
+
+          
+            async function eliminarProducto(id, nombre) {
+                if (!confirm(`¿Estás seguro de eliminar "${nombre}"?`)) return;
+
+                try {
+                    const response = await fetch(`http://localhost:5100/products/delete/${id}`, {
+                        method: 'DELETE',
+                        headers: { 'Content-Type': 'application/json' }
+                    });
+
+                    if (response.ok) {
+                        alert(`Producto "${nombre}" eliminado con éxito`);
+                        cargarProductos(); 
+                    } else {
+                        alert("Error al eliminar el producto00");
+                    }
+                } catch (error) {
+                    console.error("Error eliminando el producto:", error);
+                }
+            }
+
     </script>
 </body>
 </html>
