--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
       </a>
 
       <!-- Tarjeta 2 -->
-      <a href="./inventario.html" class="block bg-white p-6 shadow-xl rounded-lg text-center transition transform hover:scale-105 hover:shadow-2xl hover:bg-blue-50">
+      <a href="./inventory.html" class="block bg-white p-6 shadow-xl rounded-lg text-center transition transform hover:scale-105 hover:shadow-2xl hover:bg-blue-50">
         <div class="flex justify-center">
           <img src="./img/service.jpg" class="w-full max-w-md mx-auto rounded-md" />
         </div>
