--- a/public/login.html
+++ b/public/login.html
@@ -6,26 +6,30 @@
     <title>Login - Farmacia Salud Plus</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen flex items-center justify-center bg-gradient-to-r from-gray-100 to-gray-400">
-    <div class="bg-white p-8 rounded-lg shadow-2xl w-96 border border-gray-200 backdrop-blur-md bg-opacity-80">
+<body class="h-screen flex items-center justify-center bg-gradient-to-r from-gray-300 to-gray-600">
+    <div class="bg-gray-900 p-8 rounded-lg shadow-2xl w-96 border border-gray-200 backdrop-blur-md bg-opacity-80">
 
-        <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Iniciar Sesión</h2>
+        <h2 class="text-3xl font-bold text-center text-purple-400 mb-6">Iniciar Sesión</h2>
         <form id="loginForm" class="space-y-6">
 
             <div class="relative">
                 <input type="email" id="email" class="peer w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 outline-none focus:border-blue-500 placeholder-transparent" placeholder="Correo Electrónico" required>
-                <label for="email" class="absolute left-3 top-3 text-gray-500 transition-all bg-white px-1 peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-focus:-top-2 peer-focus:text-xs peer-focus:text-blue-600 peer-valid:-top-2 peer-valid:text-xs peer-valid:text-blue-600">Correo Electrónico</label>
+                <label for="email" class="absolute left-3 top-3 text-gray-500 transition-all bg-white px-1 peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-focus:-top-2 peer-focus:text-xs peer-focus:text-purple-400 peer-valid:-top-2 peer-valid:text-xs peer-valid:text-purple-400">Correo Electrónico</label>
             </div>
             
             <div class="relative">
                 <input type="password" id="password" class="peer w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 outline-none focus:border-blue-500 placeholder-transparent" placeholder="Contraseña" required>
-                <label for="password" class="absolute left-3 top-3 text-gray-500 transition-all bg-white px-1 peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-focus:-top-2 peer-focus:text-xs peer-focus:text-blue-600 peer-valid:-top-2 peer-valid:text-xs peer-valid:text-blue-600">Contraseña</label>
+                <label for="password" class="absolute left-3 top-3 text-gray-500 transition-all bg-white px-1 peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-focus:-top-2 peer-focus:text-xs peer-focus:text-purple-400 peer-valid:-top-2 peer-valid:text-xs peer-valid:text-purple-400">Contraseña</label>
             </div>
             
-            <button type="submit" class="w-full bg-blue-600 text-white p-3 rounded-md hover:bg-blue-700 text-lg transition-all">Ingresar</button>
+            <button type="submit" class="w-full bg-gray-500 text-purple-400 p-3 rounded-md hover:bg-gray-900 text-lg transition-all">Ingresar</button>
         </form>
-        <p class="text-center text-gray-600 mt-4">¿No tienes una cuenta? <a href="./register.html" class="text-blue-600 font-semibold">Regístrate</a></p>
+        <p class="text-center text-white mt-4">¿No tienes una cuenta? <a href="./register.html" class="text-purple-400 font-semibold">Regístrate</a></p>
         <p id="errorMessage" class="text-red-500 text-center mt-2 hidden"></p>
+
+        <p class="text-center text-gray-600 mt-4">
+            <a href="./index.html" class="text-purple-400 font-semibold hover:underline">Volver</a>
+        </p>
     </div>
 
     <script>
