--- a/public/store.html
+++ b/public/store.html
@@ -10,6 +10,46 @@
     <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 <body class="bg-gradient-to-r from-gray-100 to-gray-400 font-sans">
-    <h1>Store</h1>
+  <div class="container mx-auto p-6">
+     <header class="bg-gradient-to-r from-gray-700 to-gray-900 text-white p-6 flex justify-center shadow-2xl rounded-2xl mx-6  border border-blue-400/50">
+        <a href="./index.html" class="text-3xl font-bold drop-shadow-lg tracking-wide text-purple-400 hover:text-purple-600 transition duration-300 ease-in-out">
+            Farmacia Salud Plus
+        </a>
+    </header>
+    
+    <div id="productosContainer" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-4">
+      <!-- Aquí se cargarán las tarjetas de los productos -->
+    </div>
+  </div>
 </body>
+
+<script>
+    document.addEventListener("DOMContentLoaded", async () => {
+        const contenedor = document.getElementById("productosContainer");
+
+        try {
+            const res = await fetch("http://localhost:5100/products/getAll");
+            const productos = await res.json();
+
+            productos.forEach(prod => {
+                // No mostrar productos sin stock
+                if (prod.stock === 0) return;
+
+                const card = document.createElement("div");
+                card.className = "bg-white p-4 shadow rounded cursor-pointer hover:bg-gray-50";
+                card.onclick = () => window.location.href = `producto.html?id=${prod._id}`;
+                card.innerHTML = `
+                    <img src="${prod.imagen || './img/default.jpg'}" class="w-full h-40 object-cover mb-2 rounded" />
+                    <h4 class="text-xl font-semibold">${prod.nombre}</h4>
+                    <p class="text-green-600 font-bold">$${prod.precio}</p>
+                `;
+                contenedor.appendChild(card);
+            });
+        } catch (error) {
+            console.error("Error cargando productos:", error);
+        }
+    });
+
+
+</script>
 </html>
