--- a/public/carrito.html
+++ b/public/carrito.html
@@ -14,5 +14,6 @@
     <h1 class="text-3xl font-bold text-center my-6">Tu carrito</h1>
     <div id="carritoContainer" class="max-w-2xl mx-auto p-4"></div>
     <button onclick="finalizarCompra()" class="block mx-auto mt-6 bg-red-600 text-white px-4 py-2 rounded">Finalizar compra</button>
+        <button onclick="window.location.href='compras.html'" class="block mx-auto mt-6 bg-green-600 text-white px-4 py-2 rounded">Ver mi historial de compra</button>
 </body>
 </html>
