--- a/public/register.html
+++ b/public/register.html
@@ -52,30 +52,37 @@
     </div>
 
     <script>
-        document.getElementById("registerForm").addEventListener("submit", async function(event) {
-            event.preventDefault();
-            
-            const nombre = document.getElementById("nombre").value;
-            const apellido = document.getElementById("apellido").value;
-            const email = document.getElementById("email").value;
-            const telefono = document.getElementById("telefono").value;
-            const tipo = document.getElementById("tipo").value;
-            const clave = document.getElementById("clave").value;
+    document.getElementById("registerForm").addEventListener("submit", async function(event) {
+        event.preventDefault();
+        
+        const nombre = document.getElementById("nombre").value;
+        const apellido = document.getElementById("apellido").value;
+        const email = document.getElementById("email").value;
+        const telefono = document.getElementById("telefono").value;
+        const tipo = document.getElementById("tipo").value;
+        const clave = document.getElementById("clave").value;
 
-            const response = await fetch("http://localhost:5100/users/register", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ nombre, apellido, email, telefono, tipo, clave })
-            });
+        const regexClave = /^(?=.*[0-9])(?=.*[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).{8,}$/;
 
-            const data = await response.json();
-            if (response.ok) {
-                alert("Registro exitoso. Ahora puedes iniciar sesión.");
-                window.location.href = "login.html";
-            } else {
-                alert("Error: " + data.error);
-            }
+        if (!regexClave.test(clave)) {
+            alert("La contraseña debe tener al menos 8 caracteres, un número y un carácter especial.");
+            return;
+        }
+
+        const response = await fetch("http://localhost:5100/users/register", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ nombre, apellido, email, telefono, tipo, clave })
         });
-    </script>
+
+        const data = await response.json();
+        if (response.ok) {
+            alert("Registro exitoso. Ahora puedes iniciar sesión.");
+            window.location.href = "login.html";
+        } else {
+            alert("Error: " + data.error);
+        }
+    });
+</script>
 </body>
 </html>
