--- a/public/carrito.html
+++ b/public/carrito.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Carrito</title>
-    <script defer src="carrito.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" type="image/png" href="./img/favicon.png">
+  <meta charset="UTF-8">
+  <title>Carrito</title>
+  <script defer src="carrito.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="icon" type="image/png" href="./img/favicon.png">
+  <style>
+    body {
+      font-family: 'DM Sans', sans-serif;
+    }
+  </style>
 </head>
-<body>
-    <h1 class="text-3xl font-bold text-center my-6">Tu carrito</h1>
-    <div id="carritoContainer" class="max-w-2xl mx-auto p-4"></div>
-    <button onclick="finalizarCompra()" class="block mx-auto mt-6 bg-red-600 text-white px-4 py-2 rounded">Finalizar compra</button>
-        <button onclick="window.location.href='compras.html'" class="block mx-auto mt-6 bg-green-600 text-white px-4 py-2 rounded">Ver mi historial de compra</button>
+<body class="bg-gray-900 text-white min-h-screen flex flex-col justify-center">
+
+  <div class="max-w-3xl mx-auto px-4 py-12">
+    <h1 class="text-4xl font-bold text-center text-purple-400 mb-10">🛒 Tu Carrito</h1>
+
+    <div id="carritoContainer" class="bg-gray-800 p-6 rounded-2xl shadow-lg min-h-[150px]">
+      <!-- Contenido generado por JavaScript -->
+    </div>
+
+    <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mt-10">
+      <button onclick="finalizarCompra()" class="bg-purple-600 hover:bg-purple-700 transition px-6 py-2 rounded-xl text-white shadow-md">
+        <i class="fas fa-credit-card mr-2"></i>Finalizar compra
+      </button>
+      <button onclick="window.location.href='compras.html'" class="bg-green-600 hover:bg-green-700 transition px-6 py-2 rounded-xl text-white shadow-md">
+        <i class="fas fa-receipt mr-2"></i>Ver historial de compra
+      </button>
+      <button onclick="window.location.href='index.html'" class="bg-blue-600 hover:bg-blue-700 transition px-6 py-2 rounded-xl text-white shadow-md">
+        <i class="fas fa-home mr-2"></i>Volver al inicio
+      </button>
+    </div>
+  </div>
+
 </body>
 </html>
