--- a/public/producto.html
+++ b/public/producto.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Detalle Producto</title>
-    <script defer src="detalle.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" type="image/png" href="./img/favicon.png">
+  <meta charset="UTF-8">
+  <title>Detalle Producto</title>
+  <script defer src="detalle.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="icon" type="image/png" href="./img/favicon.png">
+  <style>
+    body {
+      font-family: 'DM Sans', sans-serif;
+    }
+  </style>
 </head>
-<body>
-    <div id="detalleContainer" class="max-w-xl mx-auto mt-10 p-4 bg-white shadow rounded"></div>
-    <button onclick="window.location.href='carrito.html'" class="block mx-auto mt-6 bg-green-600 text-white px-4 py-2 rounded">Ir al Carrito</button>
+<body class="bg-gray-900 text-white min-h-screen flex flex-col items-center p-8">
+
+  <div id="detalleContainer" class="w-full max-w-3xl bg-gray-800 p-6 rounded-2xl shadow-xl text-gray-200">
+    <!-- Aquí se carga el contenido dinámico desde detalle.js -->
+  </div>
+
+  <div class="mt-8 flex gap-4">
+    <button onclick="window.location.href='carrito.html'" class="bg-green-600 hover:bg-green-700 transition text-white px-6 py-3 rounded-xl shadow-md">
+      <i class="fas fa-shopping-cart mr-2"></i>Ir al Carrito
+    </button>
+    <button onclick="window.location.href='index.html'" class="bg-blue-600 hover:bg-blue-700 transition text-white px-6 py-3 rounded-xl shadow-md">
+      <i class="fas fa-home mr-2"></i>Volver al inicio
+    </button>
+  </div>
+
 </body>
 </html>
