fix carrito vacio

--- a/public/carrito.html
+++ b/public/carrito.html
@@ -20,7 +20,7 @@
   <div class="max-w-3xl mx-auto px-4 py-12">
     <h1 class="text-4xl font-bold text-center text-purple-400 mb-10">🛒 Tu Carrito</h1>
 
-    <div id="carritoContainer" class="bg-gray-800 p-6 rounded-2xl shadow-lg min-h-[150px]">
+    <div id="carritoContainer" class="bg-gray-800 p-6 rounded-2xl text-black shadow-lg min-h-[150px]">
       <!-- Contenido generado por JavaScript -->
     </div>
 
